# iridium

./: .gitignore  Cargo.toml
src/: camera.rs  imgui.rs  lib.rs  main.rs  renderer.rs  world.rs
src/shaders/: frag.wgsl  vert.wgsl
